--- a/Gary's Notebook.ipynb
+++ b/Gary's Notebook.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "weekly-surveillance",
+   "id": "greater-facial",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "occupational-darwin",
+   "id": "documented-morning",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "swedish-conversion",
+   "id": "italian-consortium",
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "steady-channels",
+   "id": "lesbian-layout",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,16 +77,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "recorded-louis",
+   "id": "rolled-cyprus",
    "metadata": {},
    "source": [
     "#  列表与字典"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "historic-consent",
+   "metadata": {},
+   "source": [
+    "列表"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "finnish-twist",
+   "id": "reserved-effect",
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "unauthorized-naples",
+   "id": "dominican-sugar",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "rational-corruption",
+   "id": "assigned-marijuana",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "organized-ecology",
+   "id": "upper-reputation",
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "black-airport",
+   "id": "extended-revelation",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "explicit-impression",
+   "id": "after-syndication",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "amateur-terry",
+   "id": "unlike-permission",
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "touched-panama",
+   "id": "referenced-consumption",
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "approved-ensemble",
+   "id": "embedded-andrew",
    "metadata": {},
    "outputs": [
     {
@@ -267,8 +275,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "grateful-input",
+   "execution_count": 24,
+   "id": "organizational-nashville",
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +284,8 @@
      "output_type": "stream",
      "text": [
       "['panda', 'cat', 'jopyter', 'fba']\n",
-      "['panda', 'cat', 'jopyter']\n"
+      "['panda', 'cat', 'jopyter']\n",
+      "['panda', 'cat']\n"
      ]
     }
    ],
@@ -288,13 +297,222 @@
     "print(list)\n",
     "# remove element by index\n",
     "list.pop(3)\n",
+    "print(list)\n",
+    "# del() 语法结构略有不同\n",
+    "del(list[2])\n",
     "print(list)"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "id": "continent-discrimination",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['cat', 'fba', 'jopyter', 'nba', 'panda']\n",
+      "['panda', 'nba', 'jopyter', 'fba', 'cat']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sort() 升序/降序\n",
+    "list = ['panda','cat','jopyter','nba','fba']\n",
+    "list.sort()\n",
+    "print(list)\n",
+    "list.sort(reverse=True)\n",
+    "print(list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "awful-research",
+   "metadata": {},
+   "source": [
+    "$$ 列表与数组"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "forced-angle",
+   "metadata": {},
+   "source": [
+    "# 列表与数组"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "nonprofit-virtue",
+   "metadata": {},
+   "source": [
+    "数组（Tuple），数组使用()，列表使用[]。\n",
+    "数组是不可变，在声明数组后既不能对其进行修改和删除，也不嫩在其中添加任何新的数据项。数组不存在 append()、remove()、pop()方法。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "ruled-conflict",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('cs', 'ee', 'mga', 'bv')\n",
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# tuple example\n",
+    "tuple = ('cs','ee','mga','bv')\n",
+    "print(tuple)\n",
+    "print(type(tuple))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "above-estonia",
+   "metadata": {},
+   "source": [
+    "字典--（Key-Value) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "interracial-berkeley",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'brand': 'kia', 'model': 'tesla', 'type': 'suv', 'year': '2020'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Dictionary example\n",
+    "dict = {\n",
+    "    'brand':'kia',\n",
+    "    'model':'tesla',\n",
+    "    'type':'suv',\n",
+    "    'year':'2020'\n",
+    "}\n",
+    "print(dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "relevant-arlington",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kia\n",
+      "kia\n"
+     ]
+    }
+   ],
+   "source": [
+    "# access the brand value by key\n",
+    "car_brand = dict['brand']\n",
+    "print(car_brand)\n",
+    "# access the brand value by get()\n",
+    "carbrand = dict.get('brand')\n",
+    "print(carbrand)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "meaningful-hartford",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'brand': 'nissan', 'model': 'tesla', 'type': 'suv', 'year': '2020', 'bradn': 'nissan'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# update value\n",
+    "\n",
+    "dict['brand'] = 'nissan'\n",
+    "print(dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "verbal-asset",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "key: brand\n",
+      "key: model\n",
+      "key: type\n",
+      "key: year\n",
+      "key: bradn\n",
+      "value: nissan\n",
+      "value: tesla\n",
+      "value: suv\n",
+      "value: 2020\n",
+      "value: nissan\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for loop go over dict\n",
+    "# print all keys\n",
+    "for key in dict.keys():\n",
+    "    print('key: '+key)\n",
+    "# print all values:\n",
+    "for value in dict.values():\n",
+    "    print('value: '+value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "optical-negotiation",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "brand nissan\n",
+      "model tesla\n",
+      "type suv\n",
+      "year 2020\n",
+      "bradn nissan\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print key-value pairs\n",
+    "for key, value in dict.items():\n",
+    "    print(key,value)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "green-booth",
+   "id": "yellow-turner",
    "metadata": {},
    "outputs": [],
    "source": []
