--- a/Python basic -Jupyter数据科学.ipynb
+++ b/Python basic -Jupyter数据科学.ipynb
@@ -944,13 +944,14 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "输出：\n",
     "\n",
     "This is from my_module.py file!\n",
-    "my_module"
+    "\n",
+    "my_module\n"
    ]
   },
   {
