--- a/NumPy.ipynb
+++ b/NumPy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,9 +20,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for /: 'list' and 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-d302dfdc68d3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mdistance\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m55\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m60\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m45\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mspeed\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mtime\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdistance\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mspeed\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"time: \"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for /: 'list' and 'list'"
+     ]
+    }
+   ],
    "source": [
     "# 5.2 为何Numyp 数组优于列表\n",
     "distance = [55,60,45]\n",
@@ -33,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +187,7 @@
        "array([1, 1, 0, 1, 0, 0, 0, 0, 0, 1])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +207,7 @@
        "array([4, 3, 2, 5, 5])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,18 +218,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[2, 2, 0, 1],\n",
-       "       [0, 2, 2, 3],\n",
-       "       [2, 3, 2, 1]])"
+       "array([[0, 1, 1, 3],\n",
+       "       [0, 0, 1, 2],\n",
+       "       [4, 2, 0, 3]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,19 +240,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[2, 3, 3],\n",
-       "       [3, 2, 3],\n",
-       "       [4, 1, 2],\n",
-       "       [3, 1, 2]])"
+       "array([[2, 2, 0],\n",
+       "       [1, 0, 2],\n",
+       "       [2, 3, 2],\n",
+       "       [3, 2, 1]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -353,6 +365,235 @@
    "metadata": {},
    "source": [
     "# 5.6 NumPy数组的切片"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "我们不光可以使用括号访问单个数组元素，也可以使用它来访问带有切片符号（用冒号字符标记）的子数组。\n",
+    "\n",
+    "与列表不同，数组切片返回的是数组数据的试图，不是副本。如果为数组创建一个子数组，然后修改企中的任何元素，那么院是数组也将被修改。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "our array: [0 1 2 3 4 5 6 7 8 9]\n",
+      "first five elements: [0 1 2 3 4]\n",
+      "elements after index 5: [5 6 7 8 9]\n",
+      "middle sub-array: [4 5 6]\n",
+      "every other element: [0 2 4 6 8]\n",
+      "every other element, starting at index 1: [1 3 5 7 9]\n",
+      "elements in reversed order: [9 8 7 6 5 4 3 2 1 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create an array\n",
+    "x = np.arange(10)\n",
+    "print(\"our array:\", x)\n",
+    "print(\"first five elements:\",x[:5])\n",
+    "print(\"elements after index 5:\",x[5:])\n",
+    "print(\"middle sub-array:\",x[4:7])\n",
+    "print(\"every other element:\", x[::2])\n",
+    "print(\"every other element, starting at index 1:\", x[1::2])\n",
+    "print(\"elements in reversed order:\", x[::-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "多维数组用逗号。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2-d array:\n",
+      " [[3 5 2 4]\n",
+      " [7 6 8 8]\n",
+      " [1 6 7 7]]\n",
+      "two rows, three columns:\n",
+      " [[3 5 2]\n",
+      " [7 6 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"2-d array:\\n\",x2)\n",
+    "print(\"two rows, three columns:\\n\", x2[:2,:3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "如果创建一个数组的子数组并对该子数组进行更改，那么原属数组也会随之更改。为确保数组的数据完整性，使用copy（）辅助原始数组，然后可以在不影响原始数组的情况下对组数组进行修改。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original 2-d array:\n",
+      " [[3 5 2 4]\n",
+      " [7 6 8 8]\n",
+      " [1 6 7 7]]\n",
+      "sub-array:\n",
+      " [[3 5]\n",
+      " [7 6]]\n",
+      "modified sub array:\n",
+      " [[88  5]\n",
+      " [ 7  6]]\n",
+      "original array after changes in sub-array:\n",
+      " [[88  5  2  4]\n",
+      " [ 7  6  8  8]\n",
+      " [ 1  6  7  7]]\n",
+      "making a copy of the original array\n",
+      "copy of the original array:\n",
+      " [[88  5]\n",
+      " [ 7  6]]\n",
+      "copied array after changes:\n",
+      " [[42  5]\n",
+      " [ 7  6]]\n",
+      "original array:\n",
+      " [[88  5  2  4]\n",
+      " [ 7  6  8  8]\n",
+      " [ 1  6  7  7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# original array\n",
+    "print(\"original 2-d array:\\n\",x2)\n",
+    "# creating a 2x2 subarray from the original array\n",
+    "x2_sub = x2[:2,:2]\n",
+    "print(\"sub-array:\\n\", x2_sub)\n",
+    "# modifying sub-array\n",
+    "x2_sub[0,0] = 88\n",
+    "print(\"modified sub array:\\n\", x2_sub)\n",
+    "# orignial array after sub-array changes\n",
+    "print(\"original array after changes in sub-array:\\n\",x2)\n",
+    "print(\"making a copy of the original array\")\n",
+    "x2_sub_copy = x2[:2,:2].copy()\n",
+    "print(\"copy of the original array:\\n\", x2_sub_copy)\n",
+    "# modifying copied array\n",
+    "x2_sub_copy[0,0] = 42\n",
+    "print(\"copied array after changes:\\n\", x2_sub_copy)\n",
+    "print(\"original array:\\n\",x2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5.7 数组连接"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 数组合并：  \n",
+    "# np.concatenate()    用于相同维度数组的合并\n",
+    "# np.vstack()         处理混合维度的数组\n",
+    "# np.hstack()         处理混合维度的数组\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 3, 2, 1])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# creating two sample arrays\n",
+    "x = np.array([1,2,3])\n",
+    "y = np.array([3,2,1])\n",
+    "# combining both arrays using concatenate\n",
+    "np.concatenate([x,y])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [9, 8, 7],\n",
+       "       [6, 5, 4]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# creating a sample array\n",
+    "x = np.array([1,2,3])\n",
+    "# creating a 2-d array\n",
+    "grid = np.array([[9,8,7],\n",
+    "               [6,5,4]])\n",
+    "# vertically stack the arrays\n",
+    "np.vstack([x,grid])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 9,  8,  7, 99],\n",
+       "       [ 6,  5,  4, 99]])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# horizontally stack the arrays\n",
+    "y = np.array([[99],[99]])\n",
+    "np.hstack([grid,y])"
    ]
   },
   {
