--- a/Pandas和数据帧.ipynb
+++ b/Pandas和数据帧.ipynb
@@ -52,8 +52,11 @@
     },
     {
      "name": "stderr",
-     "output_type": "stream"
-     
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Yext\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:3: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
+     ]
     }
    ],
    "source": [
