--- a/Pandas和数据帧.ipynb
+++ b/Pandas和数据帧.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,6 +48,14 @@
      "output_type": "stream",
      "text": [
       "empty series example: Series([], dtype: float64)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Yext\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:3: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
      ]
     }
    ],
@@ -467,6 +475,606 @@
    "metadata": {},
    "source": [
     "# 6.3 .loc[] & .iloc[]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Company</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Ticker</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>American Express</td>\n",
+       "      <td>95</td>\n",
+       "      <td>AXP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Cisco</td>\n",
+       "      <td>25</td>\n",
+       "      <td>CSCO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Walt Disney</td>\n",
+       "      <td>85</td>\n",
+       "      <td>DIS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Microsoft</td>\n",
+       "      <td>41</td>\n",
+       "      <td>MSFT</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Company  Price Ticker\n",
+       "0  American Express     95    AXP\n",
+       "1             Cisco     25   CSCO\n",
+       "2       Walt Disney     85    DIS\n",
+       "3         Microsoft     41   MSFT"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# a sample dataframe containing company stock data\n",
+    "data = pd.DataFrame({'Company':['American Express','Cisco','Walt Disney','Microsoft'],\n",
+    "                     'Price': [95,25,85,41],\n",
+    "                   'Ticker':['AXP','CSCO','DIS','MSFT'],\n",
+    "                   })\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "要访问company列中索引为0的值，可以使用标签或通过指示位置来实现。对于基于标签的索引，可以使用.loc[]；而对于基于位置的索引，可以使用.iloc[]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "American Express\n",
+      "American Express\n"
+     ]
+    }
+   ],
+   "source": [
+    "# access the value that is at index 0, in column 'Company' using loc\n",
+    "print(data.loc[0]['Company'])\n",
+    "# access the value that is at index 0, in column 'Company' using iloc\n",
+    "print(data.iloc[0][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Company    Microsoft\n",
+      "Price             41\n",
+      "Ticker          MSFT\n",
+      "Name: 3, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data.iloc[3])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cisco\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data.loc[1][0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 数据帧函数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top five data:\n",
+      "             Company  Price Ticker\n",
+      "0  American Express     95    AXP\n",
+      "1             Cisco     25   CSCO\n",
+      "2       Walt Disney     85    DIS\n",
+      "3         Microsoft     41   MSFT\n",
+      "Below 5 data:\n",
+      "             Company  Price Ticker\n",
+      "0  American Express     95    AXP\n",
+      "1             Cisco     25   CSCO\n",
+      "2       Walt Disney     85    DIS\n",
+      "3         Microsoft     41   MSFT\n"
+     ]
+    }
+   ],
+   "source": [
+    "# inspecting top 5 rows of a dataframe\n",
+    "print(\"Top five data:\\n\",data.head())\n",
+    "# inspecting below 5 rows of a dataframe\n",
+    "print(\"Below 5 data:\\n\",data.tail())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Company    object\n",
+       "Price       int64\n",
+       "Ticker     object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check data type of columns\n",
+    "data.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pandas数据帧还有一种独特的方法，可以提供数据集的描述性统计信息（平均值、中位数及计数等）。要了解这些统计信息，请使用.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>61.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>33.798422</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>25.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>37.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>63.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>87.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>95.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Price\n",
+       "count   4.000000\n",
+       "mean   61.500000\n",
+       "std    33.798422\n",
+       "min    25.000000\n",
+       "25%    37.000000\n",
+       "50%    63.000000\n",
+       "75%    87.500000\n",
+       "max    95.000000"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# descriptive statistics of data\n",
+    "data.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 4 entries, 0 to 3\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column   Non-Null Count  Dtype \n",
+      "---  ------   --------------  ----- \n",
+      " 0   Company  4 non-null      object\n",
+      " 1   Price    4 non-null      int64 \n",
+      " 2   Ticker   4 non-null      object\n",
+      "dtypes: int64(1), object(2)\n",
+      "memory usage: 224.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "# information of the dataframe 数据信息\n",
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 6.5 处理数据帧中的缺失值"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "数据科学家经常会遇到未清洗的数据中存在缺失值的情况。这里的缺失意味着由某些原因导致数据不可用（NA），但是也不能因此就忽略所丢失的数据。实际上，在应用机器学习算法之前，需要处理这些缺失值。Pandas提供了一种灵活的方法来处理丢失的数据，它使用NaN（非数字）或NaT作为缺失值的默认标记。借助于此，可以使用isnull()函数轻松地检测到缺失值。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>One</th>\n",
+       "      <th>Two</th>\n",
+       "      <th>Three</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>-0.925937</td>\n",
+       "      <td>-0.090995</td>\n",
+       "      <td>-0.950357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c</th>\n",
+       "      <td>-0.203333</td>\n",
+       "      <td>0.742877</td>\n",
+       "      <td>2.349025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>d</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>e</th>\n",
+       "      <td>0.085250</td>\n",
+       "      <td>-0.545293</td>\n",
+       "      <td>1.412742</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>f</th>\n",
+       "      <td>0.583723</td>\n",
+       "      <td>0.071332</td>\n",
+       "      <td>0.352613</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>g</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>h</th>\n",
+       "      <td>0.410693</td>\n",
+       "      <td>-0.259710</td>\n",
+       "      <td>-0.932172</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        One       Two     Three\n",
+       "a -0.925937 -0.090995 -0.950357\n",
+       "b       NaN       NaN       NaN\n",
+       "c -0.203333  0.742877  2.349025\n",
+       "d       NaN       NaN       NaN\n",
+       "e  0.085250 -0.545293  1.412742\n",
+       "f  0.583723  0.071332  0.352613\n",
+       "g       NaN       NaN       NaN\n",
+       "h  0.410693 -0.259710 -0.932172"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# a sample dataframe\n",
+    "df = pd.DataFrame(np.random.randn(5,3), \n",
+    "                  index = ['a','c','e','f','h'], \n",
+    "                  columns = ['One','Two','Three'])\n",
+    "# creating a data with missing values by reindexing\n",
+    "df2 = df.reindex(['a','b','c','d','e','f','g','h'])\n",
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "可以将缺失的值视为NaN，然后使用isnull()函数检查是否存在缺失值，最后使用sum()函数统计缺失值的数量，如图6-21所示。isnull()函数的作用是返回一个尺寸一致的布尔值，以指示数值是否缺失；而sum()函数的作用是统计布尔值为真的数量。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     One    Two  Three\n",
+      "a  False  False  False\n",
+      "c  False  False  False\n",
+      "e  False  False  False\n",
+      "f  False  False  False\n",
+      "h  False  False  False\n",
+      "Count if missing values:\n",
+      " One      0\n",
+      "Two      0\n",
+      "Three    0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# checking missing values using isbull()\n",
+    "print(df2.isnull())\n",
+    "missing_values_count = df2.isnull().sum()\n",
+    "print(\"Count if missing values:\\n\", missing_values_count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "一旦知道缺失值的总数，就可以考虑如何处理这些值了。当不知道为什么会有缺失值时，一种简单的方法是使用.dropna()函数删除它们"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        One       Two     Three\n",
+      "a  0.706290  0.885459 -0.680925\n",
+      "c -0.541184  0.647782 -1.433530\n",
+      "e -0.968845  2.441104  0.170890\n",
+      "f -0.036662  0.908259  0.803572\n",
+      "h -1.226133 -1.549808 -1.772929\n"
+     ]
+    }
+   ],
+   "source": [
+    "# remove all the rows that contain a missing value\n",
+    "df2 = df.dropna()\n",
+    "print(df2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "dropna()也能够应用于列，可以使用dropna()函数中的axis=1参数删除所有至少有一个缺失值的列。作为示例，要把这种方法应用在原始的df2数据帧上。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>d</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>e</th>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: [a, b, c, d, e]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# remove all columns with at least one missing value 需要重新运行df2\n",
+    "column_with_na_dropped = df2.dropna(axis=1)\n",
+    "column_with_na_dropped.head()"
    ]
   },
   {
